<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="comments1RowModel" type="com.collagepoem.app.modules.communitypageinfoone.data.model.Comments1RowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearCommentcard"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <ImageView android:id="@+id/imageProfilepicOne"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="@dimen/_20pxv"
            android:scaleType="fitXY"
            android:src="@drawable/img_profilepic"
            tools:ignore="ContentDescription" tools:src="@drawable/img_profilepic"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnusername"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6pxh"
            android:layout_marginTop="@dimen/_5pxv"
            android:layout_weight="0.82" android:layout_width="0dp" android:orientation="vertical">
            <TextView android:ellipsize="end"
                android:id="@+id/txtUsernameOne"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{comments1RowModel.txtUsernameOne}"
                style="@style/txtArialboldmt12" tools:text="@string/lbl_username1"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtDuration"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{comments1RowModel.txtDuration}"
                style="@style/txtArialmt10_3" tools:text="@string/lbl_2_days_ago"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtComment"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_11pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{comments1RowModel.txtComment}"
                style="@style/txtArialmt14_1" tools:text="@string/lbl_blablabla"/>
        </LinearLayout>
        <ImageView android:id="@+id/imageLikebtnOne"
            android:layout_height="@dimen/_16pxh"
            android:layout_marginBottom="@dimen/_38pxv"
            android:layout_marginStart="@dimen/_6pxh"
            android:layout_marginTop="@dimen/_5pxv"
            android:layout_width="@dimen/_18pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_likebtn_16x18"
            tools:ignore="ContentDescription" tools:src="@drawable/img_likebtn_16x18"/>
    </LinearLayout>
</layout>
