<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="loginpageVM" type="com.collagepoem.app.modules.loginpage.data.viewmodel.LoginpageVM"/>
    </data>
    <FrameLayout android:id="@+id/frameLoginpage"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylegray_200">
        <ImageView android:id="@+id/imageBackground"
            android:layout_gravity="start"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/img_background_914x411"
            tools:ignore="ContentDescription" tools:src="@drawable/img_background_914x411"/>
        <LinearLayout android:id="@+id/linearColumnvolume"
            android:layout_gravity="top|center"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_206pxv"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_206pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <ImageView android:id="@+id/imageVolume"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_38pxh"
                android:layout_marginEnd="@dimen/_137pxh"
                android:layout_marginStart="@dimen/_137pxh"
                android:layout_width="@dimen/_80pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_volume"
                tools:ignore="ContentDescription" tools:src="@drawable/img_volume"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtSlogan"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_137pxh"
                android:layout_marginStart="@dimen/_137pxh"
                android:layout_marginTop="@dimen/_11pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{loginpageVM.loginpageModel.txtSlogan}"
                style="@style/txtArialmt12" tools:text="@string/msg_start_in_instan"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_99_radius_4"
                android:ellipsize="end"
                android:hint="@string/lbl_account"
                android:id="@+id/etAcoount" android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_110pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_14pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_13pxh"
                android:paddingTop="@dimen/_15pxv"
                android:singleLine="true"
                android:text="@={loginpageVM.loginpageModel.etAcoountValue}"
                android:textColorHint="@color/gray_600"
                style="@style/etSolidRounded" tools:ignore="Autofill"/>

            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnLogInSignUpOne"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_63pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_15pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_15pxv"
                android:singleLine="true"
                android:text="@string/msg_log_in_sign_u"
                android:textAllCaps="false"
                style="@style/btnSolidRounded" tools:text="@string/msg_log_in_sign_u"/>
        </LinearLayout>
    </FrameLayout>
</layout>
